expertLevelCompletedJSchallenges.txt
const relationToLuke = str => {
	return `Luke, I am your ${str == "Darth Vader"? "father"
	:str === "Leia"? "sister": "Han"? "brother in law"
	:"R2D2"? "droid";}.`
}

Edabit error message is below.

ERROR: [eval]:10
 :"R2D2"? "droid";}.`
                 ^

SyntaxError: Unexpected token ;
    at new Script (vm.js:86:7)
    at createScript (vm.js:268:10)
    at Object.runInThisContext (vm.js:316:10)
    at Object.<anonymous> ([eval]-wrapper:9:26)
    at 
    at evalScript (internal/process/execution.js:80:25)
    at internal/main/eval_string.js:23:3
